feat #2 : SpringSecurity 설정 및 구글 로그인 완료 / 스웨거 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,16 @@ spring:
           time_zone: Asia/Seoul
   application:
     name: timeto
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_PASSWORD}
+            scope:
+              - email
+              - profile
 springdoc:
   api-docs:
     path: /api-docs
