--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,8 +28,7 @@ spring:
               - profile
 springdoc:
   api-docs:
-    path: /api-docs
+    enabled: true
   swagger-ui:
-    path: /swagger-ui.html
-    operations-sorter: method
+    enabled: true
   packages-to-scan: com.timeto
