--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.4.4'
-    id 'io.spring.dependency-management' version '1.1.7'
+    id 'org.springframework.boot' version '3.2.4' // 더 안정적인 버전으로 변경
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group = 'com'
@@ -35,16 +35,14 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    // swagger
+    // swagger - 최신 버전으로 업데이트
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
 
     // Validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-    // oauth
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    // oauth - spring-boot-starter-security 중복 제거
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-
 }
 
 tasks.named('test') {
