--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
       client:
         registration:
           google:
+            redirect-uri: ${BASE_URL}/login/oauth2/code/google
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_PASSWORD}
             scope:
