feat #55 : 서버 로컬용과 배포용 구분

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 server:
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:local}
   port: 8443
   ssl:
     key-store: /opt/timeto/ssl/keystore.p12
