--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 server:
+  servlet:
+    session:
+      cookie:
+        same-site: none
+        secure: true
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:local}
   port: 8443
@@ -8,6 +13,10 @@ server:
     key-store-type: PKCS12
     key-alias: tomcat
 spring:
+  session:
+    store-type: jdbc # 또는 redis, mongodb 등
+    jdbc:
+      initialize-schema: always
   datasource:
     url: jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?serverTimezone=Asia/Seoul&useLegacyDatetimeCode=false
     driverClassName: com.mysql.cj.jdbc.Driver
