--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,7 +58,7 @@ jwt:
 # OAuth2 로그인 성공 후 리다이렉트 URI 설정
 app:
   oauth2:
-    redirect-uri: http://localhost:5173/goal
+    redirect-uri: https://time-to.co.kr/goal
   cors:
     allowed-origins:
       - https://time-to.co.kr
