--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,12 @@ server:
         secure: true
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:local}
-  port: 8080
+  port: 8443
+  ssl:
+    key-store: /opt/timeto/ssl/keystore.p12
+    key-store-password: ${SSL_PASSWORD}
+    key-store-type: PKCS12
+    key-alias: tomcat
 spring:
   session:
     store-type: jdbc # 또는 redis, mongodb 등
